--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-timeout-handler": "^2.2.2",
     "firebase-admin": "^13.3.0",
     "https-proxy-agent": "^7.0.6",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
