--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "p-limit": "^7.1.1",
     "razorpay": "^2.9.6",
     "redis": "^5.0.1",
     "sharp": "^0.33.5",
